# ollamabot

./: .gitignore  README.md  install.sh  server.py
sdk/: pyproject.toml
sdk/ollamabot/: __init__.py  cli.py  client.py
